# pacifiers-shop

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
resources/: pacifier.icns
scripts/: build.py  run.py  vendor_binaries.py
src/pacifiershop/: __init__.py  downloader.py  main.py  routing.py
tests/: test_downloader_outputs.py  test_routing.py
